[package]
name = "nrf91-rust-bootloader"
version = "0.1.0"
authors = ["Sigvart Hovland <sigvart.m@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "nrf_cc310_bl_0.9.12"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
cortex-m-log = "0.6.0"
panic-halt = "0.2.0"
nrf91 = "0.1.1"
cty = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "nrf91-rust-bootloader"
test = false
bench = false

[profile.dev]
debug=true
codegen-units = 1
incremental = false

[profile.release]
debug=true
lto=true
codegen-units=1
incremental=false

